# NetworkSample

./: .gitignore  README.md
my_protocol/: simple_client.c
simple_network_lib/: CMakeLists.txt  client_app.c  server_app.c
simple_network_lib/lib/: CMakeLists.txt
simple_network_lib/lib/include/: mynetlib_client.h  mynetlib_server.h
simple_network_lib/lib/src/: mynetlib_client.c  mynetlib_server.c
tcp/: CMakeLists.txt  a.out  c  client.c  http_client.c  http_server.c  simple_client.c  simple_server.c
udp/: loopback_comm.py
webserver/: webapp.py  webapp_wsgi.py  wsgi_webapp.py
